# django-admin-extra-urls

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGES  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
admin_extra_urls/: __init__.py  extras.py  upload.py
admin_extra_urls/templates/admin_extra_urls/: change_form.html  change_list.html  upload.html
admin_extra_urls/templates/admin_extra_urls/includes/: change_form_buttons.html  change_list_buttons.html
admin_extra_urls/templatetags/: extra_urls.py
docs/: api.rst  changes.rst  conf.py  howto.rst  index.rst
docs/_ext/: applyxrefs.py  djangodocs.py  literals_to_xrefs.py
docs/_static/: rtd.css
requirements/: testing.pip
src/: __init__.py  button.py  checks.py  config.py  mixins.py
src/admin_extra_urls/: __init__.py  api.py  button.py  checks.py  comapt.py  config.py  decorators.py  extras.py  mixins.py  site.py  upload.py  utils.py
src/admin_extra_urls/templates/admin_extra_urls/: action_page.html  change_form.html  change_list.html  confirm.html  upload.html
src/admin_extra_urls/templates/admin_extra_urls/grappelli/: change_form.html  change_list.html
src/admin_extra_urls/templates/admin_extra_urls/includes/: attrs.html  button.html  change_form_buttons.html  change_list_buttons.html  styles.html
src/admin_extra_urls/templatetags/: extra_urls.py
src/requirements/: develop.pip  testing.pip
src/templates/admin_extra_urls/: action_page.html  change_form.html  change_list.html  confirm.html
src/templates/admin_extra_urls/grappelli/: change_form.html
src/templates/admin_extra_urls/includes/: action_buttons.html  button.html  change_form_buttons.html  change_list_buttons.html
src/templatetags/: extra_urls.py
tests/: .coveragerc  conftest.py  manage.py  settings.py  test_actions.py  test_confirm.py  test_extra_url.py  test_links.py  test_upload.py  test_utils.py
tests/demo/: admin.py  settings.py  urls.py
tests/demo/migrations/: 0001_initial.py
tests/demoapp/demo/: admin.py  backends.py  models.py  settings.py  upload.py  urls.py
tests/demoapp/demo/migrations/: 0001_initial.py
(+4 files in other folders)
