[pep8]
ignore = E501,E401,W391,E128,E261,E731
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template


[flake8]
max-complexity = 12
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template
ignore = E501,E401,W391,E128,E261,E731

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = admin_extra_urls
multi_line_output = 0
line_length=100
balanced_wrapping = true
known_standard_library = isort

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pytest]
DJANGO_SETTINGS_MODULE=demo.settings
python_paths= . tests
norecursedirs = data .tox
addopts = -vvv
        -p no:capturelog
        -p no:xdist
        -p no:pep8
        --tb=short
        --capture=no
        --echo-version django
        --echo-version pip
        --echo-version admin_extra_urls