[pep8]
ignore = E501,E401,W391,E128,E261,E731
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template


[flake8]
max-complexity = 12
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template
ignore = E501,E401,W391,E128,E261,E731

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = wfp_eforms
multi_line_output = 0
line_length=100
balanced_wrapping = true
known_standard_library = isort

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pytest]
python_paths=./tests/demoapp/
django_find_project = false
DJANGO_SETTINGS_MODULE=demo.settings
norecursedirs = .tox docs ./tests/demoapp/
python_files=tests/test_*.py
addopts =
        -q
        --tb=short
        --capture=no
        --echo-version django
        --echo-attr django.conf.settings.DATABASES.default.ENGINE

pep8ignore = * ALL
markers =
    functional: mark a test as functional
